# fasthttp

./: .all-contributorsrc  .pre-commit-config.yaml  .readthedocs.yaml  AUTHORS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  mkdocs.yml  pyproject.toml  ruff.toml  ty.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml  release.yml  stale.yml
.github/DISCUSSION_TEMPLATE/: general.yml  ideas.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  question.yml
.github/scripts/: download_stats.py
.github/workflows/: all-contributors.yml  auto-version.yml  cleanup.yml  codeql.yml  codspeed.yml  coverage.yml  create-release.yml  download-stats.yml  gitleaks.yml  labeler.yml  publish.yml  release.yml  scorecard.yml  tests.yml  welcome.yml
docs/: README.md  badge.json  index.md  install.ps1  install.sh
docs/blog/: how-i-created-fasthttp.md  istoriya-sozdaniya-fasthttp.md
docs/en/: README.md  api-reference.md  cli.md  configuration.md  dependencies.md  examples.md  graphql.md  gui.md  http2-support.md  index.md  middleware.md  openapi.md  pydantic-validation.md  quick-start.md  request-signing.md  security.md
docs/en/about/: index.md
docs/en/cli/: commands.md  index.md  options.md
docs/en/learn/: index.md  python-types.md
docs/en/reference/: cli.md  dependencies.md  fasthttp.md  index.md  middleware.md  response.md
docs/en/tutorial/: async-session.md  authentication.md  dependencies.md  file-uploads.md  first-steps.md  http-methods.md  index.md  lifespan.md  parallel-execution.md  request-parameters.md  response-handling.md  routers.md  streaming.md  tags.md
docs/endpoints/: fasthttp.json
docs/ru/: README.md  api-reference.md  cli.md  configuration.md  dependencies.md  examples.md  graphql.md  gui.md  http2-support.md  index.md  middleware.md  openapi.md  pydantic-validation.md  quick-start.md  request-signing.md  security.md
docs/ru/about/: index.md
docs/ru/cli/: commands.md  index.md  options.md
docs/ru/learn/: index.md  python-types.md
docs/ru/reference/: cli.md  dependencies.md  fasthttp.md  index.md  middleware.md  response.md
docs/ru/tutorial/: async-session.md  authentication.md  dependencies.md  file-uploads.md  first-steps.md  http-methods.md  index.md  lifespan.md  parallel-execution.md  request-parameters.md  response-handling.md  routers.md  streaming.md  tags.md
examples/: README.md  delay_response.py  multiple_endpoints.py  query_params.py  run_all.py  test_delete.py  test_get.py  test_patch.py  test_post.py  test_put.py  user_agent.py
examples/advanced/: error_handling.py  redirect_test.py
examples/basic/: defaults_example.py  extract_assets.py  full_crud.py  response_request_info.py  test_delete.py  test_get.py  test_head.py  test_options.py  test_post.py  test_put.py
examples/data/: binary_responses.py  form_data.py
examples/dependencies/: basic_dependencies.py  with_cache_scope.py
examples/endpoints/: get_ip.py  jsonplaceholder_get.py  jsonplaceholder_posts.py  multiple_endpoints.py
examples/error/: bad_status_codes.py  connection_error.py  invalid_url.py  not_found_site.py  raise_for_status.py  raise_for_status_per_route.py  responses.py  server_errors.py  successful_request.py  timeout_error.py  validation_error.py
examples/events/: auth_injection.py  error_tracking.py  logging.py  timing.py  with_router.py
examples/files/: simple_upload.py  upload_file_object.py  upload_list.py  upload_multiple.py  upload_path.py  upload_router.py  upload_with_filename.py  upload_with_json.py
examples/graphql/: pokemon.py  rick_and_morty.py  run_examples.py  star_wars.py
examples/headers/: headers.py  user_agent.py
examples/http2/: http2_example.py
examples/methods/: json_post.py
examples/middleware/: basic_middleware 2.py  basic_middleware.py  cookie_jar.py  dummy_cookie_jar.py  error_middleware.py  response_transformer.py  retry_middleware 2.py  session_middleware.py
examples/oauth2/: client_credentials.py  shared_auth.py
examples/openapi/: openapi_example.py  openapi_info_example.py  pydantic_schema_example.py
examples/parameters/: delay_response.py  query_params.py  query_params_example.py  timeout_example.py
examples/pydantic/: advanced_validation.py  basic_validation.py  create_and_validate.py  crud_with_validation.py  nested_models.py
examples/routers/: base.py
examples/session/: basic.py  crud.py  manual_open_close.py
examples/sse/: basic.py  reconnect.py
examples/tags/: basic_tags.py
examples/websocket/: echo.py  reconnect.py  stream.py
fasthttp/: __init__.py  __meta__.py  app.py  auth.py  client.py  events.py  exceptions.py  logging.py  middleware.py  response.py  routing.py  session.py  sse.py  status.py  types.py
fasthttp/_core/: Cargo.toml
fasthttp/_core/src/: cookies.rs  headers.rs  ip.rs  lib.rs  redirect.rs  response_check.rs  secrets.rs  signer.rs  url_utils.rs  xss.rs
fasthttp/cli/: __init__.py  client.py  commands.py  main.py  output.py  repl.py  run.py
fasthttp/dependencies/: __init__.py  dependencies.py
fasthttp/exceptions/: __init__.py  base.py  connect.py  request.py  status.py  timeout.py  types.py  validator.py
fasthttp/graphql/: __init__.py  client.py  types.py
fasthttp/helpers/: __init__.py  route_inspect.py  routing.py
fasthttp/middleware/: __init__.py  base.py  cache.py  retry.py  session.py
fasthttp/openapi/: __init__.py  generator.py  routes.py  swagger.py  urls.py
fasthttp/security/: __init__.py  circuit_breaker.py  headers.py  limits.py  redirect.py  response.py  secrets.py  security.py  signer.py  ssrf.py
fasthttp/websocket/: __init__.py  client.py  exceptions.py
scripts/: Makefile  bench_compare.py
tests/: __init__.py  conftest.py  test_app.py  test_benchmark_comparison.py  test_benchmarks.py  test_cli.py  test_client.py  test_dependencies.py  test_exceptions.py  test_graphql.py  test_helpers.py  test_logging.py  test_meta.py  test_middleware.py  test_openapi.py  test_performance.py  test_response.py  test_routing.py  test_security.py  test_session.py  test_status.py  test_types.py
(+52 files in other folders)
