[build-system]
requires = ["maturin>=1,<2"]
build-backend = "maturin"

[tool.maturin]
manifest-path = "fasthttp/_core/Cargo.toml"
module-name = "fasthttp._core"
python-source = "."
features = ["pyo3/extension-module"]

[project]
name = "fasthttp-client"
version = "1.3.24"
description = "Fast and simple HTTP client library with async support and beautiful logging"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "White NEFOR", email = "n7for8572@gmail.com"},
]
maintainers = [
    {name = "White NEFOR", email = "n7for8572@gmail.com"},
]
keywords = [
    "http",
    "client",
    "async",
    "httpx",
    "fast",
    "requests",
    "http-client",
    "python"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Networking",
    "Typing :: Typed",
    "Programming Language :: Rust",
]
requires-python = ">=3.10"
dependencies = [
    "annotated-doc>=0.0.4",
    "httpx>=0.28.1",
    "orjson>=3.11.7",
    "pydantic>=2.12.5",
    "typer>=0.26.3",
    "uvicorn>=0.48.0",
    "websockets>=16.0",
]

[project.optional-dependencies]
http2 = [
    "httpx[http2]>=0.28.1",
]
dev = [
    "fasthttp-client>=1.3.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest-codspeed>=5.0.0",
    "aiohttp>=3.9.0",
    "ruff>=0.15.15",
    "pre-commit>=4.0.0",
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "pymdown-extensions>=10.21.3",
    "ty>=0.0.40"
]

[project.scripts]
fasthttp = "fasthttp.cli.main:app"

[project.urls]
Homepage = "https://github.com/ndugram/fasthttp"
Documentation = "https://github.com/ndugram/fasthttp"
Repository = "https://github.com/ndugram/fasthttp"
Issues = "https://github.com/ndugram/fasthttp/issues"

[dependency-groups]
dev = [
    "pytest-asyncio>=0.24.0",
    "pytest-codspeed>=4.3.0",
    "ruff>=0.14.14",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = "httpx.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "annotated_doc.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=fasthttp",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["fasthttp"]
omit = ["tests/*", "examples/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
