[package]
name = "fasthttp-core"
version = "0.1.0"
edition = "2024"

[lib]
name = "_core"
crate-type = ["cdylib"]

[dependencies]
hmac = "0.12"
md5 = "0.8.0"
once_cell = "1.21.4"
pyo3 = { version = "0.28.3", features = ["extension-module"] }
rand = "0.8"
regex = "1.12.3"
sha2 = "0.10"
url = "2.5.8"
